# odoo-cli

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/config/: odoo.conf
odoo_cli/: backup.py  cli.py  common.py  db.py  orm.py  utils.py
odoo_cli/cli/: addons.py  backup.py  commands.py  main.py  users.py
